--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "author": "Nicolas Chambrier <naholyr@gmail.com> (http://naholyr.fr)",
   "name": "virtualhost",
   "description": "Dispatch HTTP request to a handler depending on hostname",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/lmtm/node-virtualhost",
   "repository": {
     "type": "git",
     "url": "git://github.com/lmtm/node-virtualhost.git"
   },
   "main": "virtualhost.js",
+  "scripts": {
+    "test": "./node_modules/.bin/_mocha -R list -u bdd"
+  },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "~1.3.0",
+    "mocha": "~1.7.0",
+    "express": "~3.0.3",
+    "supertest": "~0.4.2"
+  },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
