Add keywords in package.json

--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "optionalDependencies": {},
   "engines": {
     "node": "*"
-  }
+  },
+  "keywords": ["express", "host", "hostname", "virtual", "virtualhost", "http"]
 }
